--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -47,7 +47,7 @@
                     />
 
                 <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvSimNumber"
+                    android:id="@+id/tvSimSerialNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:text="Sim Number"
@@ -56,7 +56,7 @@
                     />
 
                 <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvCopySimNumber"
+                    android:id="@+id/tvCopySimSirialNumber"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_marginTop="5dp"
@@ -68,7 +68,8 @@
                     />
             </LinearLayout>
         </android.support.v7.widget.CardView>
-        <!--IP ADDRESS-->
+
+        <!--SIM NUMBER-->
         <android.support.v7.widget.CardView
             style="@style/CardViewStyle"
             android:layout_width="match_parent"
@@ -121,165 +122,7 @@
                     />
             </LinearLayout>
         </android.support.v7.widget.CardView>
-        <!--MAC IP ADDRESS-->
-        <android.support.v7.widget.CardView
-            style="@style/CardViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            >
 
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="5dp"
-                >
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sim Number"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
-                    />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginTop="3dp"
-                    android:background="#d3d3d3"
-                    />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvSimNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sim Number"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvCopySimNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:padding="3dp"
-                    android:text="Copy"
-                    android:textColor="@android:color/holo_green_dark"
-                    android:textSize="18sp"
-                    />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-        <!--ANDROID VERSION-->
-        <android.support.v7.widget.CardView
-            style="@style/CardViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="5dp"
-                >
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sim Number"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
-                    />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginTop="3dp"
-                    android:background="#d3d3d3"
-                    />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvSimNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sim Number"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvCopySimNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:padding="3dp"
-                    android:text="Copy"
-                    android:textColor="@android:color/holo_green_dark"
-                    android:textSize="18sp"
-                    />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
-        <!--DEVICE NAME-->
-        <android.support.v7.widget.CardView
-            style="@style/CardViewStyle"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_margin="5dp"
-            >
-
-            <LinearLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:orientation="vertical"
-                android:padding="5dp"
-                >
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sim Number"
-                    android:textColor="@color/colorAccent"
-                    android:textSize="18sp"
-                    />
-
-                <View
-                    android:layout_width="match_parent"
-                    android:layout_height="1dp"
-                    android:layout_marginBottom="3dp"
-                    android:layout_marginTop="3dp"
-                    android:background="#d3d3d3"
-                    />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvSimNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="Sim Number"
-                    android:textColor="@android:color/black"
-                    android:textSize="18sp"
-                    />
-
-                <android.support.v7.widget.AppCompatTextView
-                    android:id="@+id/tvCopySimNumber"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:layout_marginTop="5dp"
-                    android:gravity="center"
-                    android:padding="3dp"
-                    android:text="Copy"
-                    android:textColor="@android:color/holo_green_dark"
-                    android:textSize="18sp"
-                    />
-            </LinearLayout>
-        </android.support.v7.widget.CardView>
 
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
